fixed navbar z-index nad started column placement

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,11 +6,13 @@ header {
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
-  padding-bottom: 10px;
   border-bottom: 1px solid black;
   align-items: center;
   position: fixed;
   width: 100%;
+  padding-bottom: 10px;
+  padding-top: 20px;
+  top: -10px;
   z-index: 1;
 }
 
@@ -25,6 +27,8 @@ header {
 
 .mytlogo {
   display: inline-block;
+  height: 60px;
+  width: 70px;
   padding-left: 30px;
 }
 
@@ -54,3 +58,21 @@ span.navigation {
 }
 
 /* MAIN CONTAINER */
+
+#main {
+  display: flex;
+  position: relative;
+  top: 81px;
+}
+
+.column.large {
+  width: 630px;
+}
+
+.column.medium {
+  width: 300px;
+}
+
+.column.small {
+  width: 240px;
+}
